--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-size-calculator",
+  "name": "rest-api-documet",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
